--- a/html5up-hyperspace/assets/css/main.css
+++ b/html5up-hyperspace/assets/css/main.css
@@ -1,5 +1,13 @@
 @import url(fontawesome-all.min.css);
+/*
+#312450	->	#1f222b
+#5e42a6	->	#2A324B 
+#b74e91	-> 	#656A7F		//skills section 
+#3c2c62	-> 	#			//used for the underline in the headings "About Me", Projects, ETC, Skills"
+#493382	->	#161B27			//very bottom of page, used for the footer
+#5052b5	->	#586F7C				// project section
 
+*/
 /*
 	Hyperspace by HTML5 UP
 	html5up.net | @ajlkn
@@ -98,7 +106,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #312450;
+		background: #1f222b;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -197,10 +205,10 @@ input, select, textarea {
 		}
 
 			h1.major:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: linear-gradient(to right, #5e42a6, #b74e91);
+				background-image: -moz-linear-gradient(to right, #2A324B, #656A7F);
+				background-image: -webkit-linear-gradient(to right, #2A324B, #656A7F);
+				background-image: -ms-linear-gradient(to right, #2A324B, #656A7F);
+				background-image: linear-gradient(to right, #2A324B, #656A7F);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
@@ -1915,7 +1923,8 @@ input, select, textarea {
 		button.primary,
 		.button.primary {
 			background-color: #ffffff;
-			color: #312450 !important;
+			color: #1f222b !important;
+
 		}
 
 			input[type="submit"].primary:after,
@@ -1945,7 +1954,17 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			border-color: rgba(255, 255, 255, 0.55) !important;
+			border-color: #3c2c62 !important;/* WAS rgba(255, 255, 255, 0.55)*/
+		}
+
+		/* Hover state primary */
+		input[type="submit"].primary:hover,
+		input[type="reset"].primary:hover,
+		input[type="button"].primary:hover,
+		button.primary:hover,
+		.button.primary:hover {
+			background-color: rgba(255, 255, 255, 0.847) !important;
+			color: #3c2c62 !important;
 		}
 
 			input[type="submit"]:hover:after,
@@ -2356,7 +2375,7 @@ input, select, textarea {
 
 		select option {
 			color: #ffffff;
-			background: #312450;
+			background: #1f222b;
 		}
 
 		select:focus::-ms-value {
@@ -2444,7 +2463,7 @@ input, select, textarea {
 		input[type="radio"]:checked + label:before {
 			background: #ffffff;
 			border-color: #ffffff;
-			color: #b74e91;
+			color: #656A7F;
 			content: '\f00c';
 		}
 
@@ -2525,7 +2544,7 @@ input, select, textarea {
 			display: block;
 			background: #ffffff;
 			border-radius: 100%;
-			color: #312450;
+			color: #1f222b;
 			text-align: center;
 			line-height: 2.5em;
 			margin: 0 0 1.3em 0;
@@ -2536,15 +2555,15 @@ input, select, textarea {
 			}
 
 				.wrapper.style1 .icon.major:before {
-					color: #5e42a6;
+					color: #2A324B;
 				}
 
 				.wrapper.style1-alt .icon.major:before {
-					color: #493382;
+					color: #161B27;
 				}
 
 				.wrapper.style2 .icon.major:before {
-					color: #5052b5;
+					color: #586F7C;
 				}
 
 				.wrapper.style2-alt .icon.major:before {
@@ -2552,7 +2571,7 @@ input, select, textarea {
 				}
 
 				.wrapper.style3 .icon.major:before {
-					color: #b74e91;
+					color: #656A7F;
 				}
 
 				.wrapper.style3-alt .icon.major:before {
@@ -3063,14 +3082,22 @@ input, select, textarea {
 				opacity: 1;
 			}
 
-		.spotlights > section:nth-child(2) {
+
+			.spotlights > section:nth-child(odd) {
+				background-color: rgba(0, 0, 0, 0.05);
+			}
+
+			.spotlights > section:nth-child(even) {
+				background-color: rgba(0, 0, 0, 0.1);
+			}
+/*		.spotlights > section:nth-child(2) {
 			background-color: rgba(0, 0, 0, 0.05);
 		}
 
 		.spotlights > section:nth-child(3) {
 			background-color: rgba(0, 0, 0, 0.1);
 		}
-
+*/
 		.spotlights > section.inactive > .image:before,
 		body.is-preload .spotlights > section > .image:before {
 			opacity: 1;
@@ -3240,15 +3267,15 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #5e42a6;
+			background-color: #2A324B;
 		}
 
 		.wrapper.style1-alt {
-			background-color: #493382;
+			background-color: #161B27;
 		}
 
 		.wrapper.style2 {
-			background-color: #5052b5;
+			background-color: #586F7C;
 		}
 
 		.wrapper.style2-alt {
@@ -3256,11 +3283,11 @@ input, select, textarea {
 		}
 
 		.wrapper.style3 {
-			background-color: #b74e91;
+			background-color: #656A7F;
 		}
 
 		.wrapper.style3-alt {
-			background-color: #953d75;
+			background-color: #FFFAFF;
 		}
 
 		.wrapper.fullscreen {
@@ -3370,7 +3397,7 @@ input, select, textarea {
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
-		background-color: #5e42a6;
+		background-color: #2A324B;
 		cursor: default;
 		padding: 1.75em 2em;
 	}
@@ -3504,7 +3531,7 @@ input, select, textarea {
 		}
 
 	#footer > .inner a {
-		border-bottom-color: rgba(255, 255, 255, 0.15);
+		border-bottom-color: rgba(245, 17, 17, 0.15);
 	}
 
 		#footer > .inner a:hover {
@@ -3524,7 +3551,7 @@ input, select, textarea {
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background: #312450;
+		background: #1f222b;
 		cursor: default;
 		height: 100vh;
 		left: 0;
@@ -3765,10 +3792,10 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: linear-gradient(to right, #5e42a6, #b74e91);
+				background-image: -moz-linear-gradient(to right, #2A324B, #656A7F);
+				background-image: -webkit-linear-gradient(to right, #2A324B, #656A7F);
+				background-image: -ms-linear-gradient(to right, #2A324B, #656A7F);
+				background-image: linear-gradient(to right, #2A324B, #656A7F);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
@@ -3857,7 +3884,7 @@ input, select, textarea {
 
 						#sidebar nav a:after {
 							background-image: none;
-							background-color: #b74e91;
+							background-color: #656A7F;
 						}
 
 		}
